--- a/styles.css
+++ b/styles.css
@@ -1,21 +1,45 @@
 canvas{
-    border: 1px solid black;
-    flex:4;
+    border: 2px solid black;
+    border-radius: 5px;
 }
 #dessin{
     display: flex;
-}
-#palette, #outil{
-    flex:1;
+    justify-content: center;
 }
 #palette div, #outils div{
-    width: 100px;
-    height: 100px;
-    border: 1px solid black;
+    width: 70px;
+    height: 70px;
+    border: 2px solid black;
     display: flex;
     justify-content: center;
     align-items: center;
+    border-radius: 5px;
+    margin: 0px 0px 2px 2px;
 }
 #palette div img, #outils div img{
     width: 60%;
+}
+#pack-outils{
+    display: flex;
+}
+#choix-outils, #choix-taille, #choix-couleur{
+    text-align: center;
+    margin-top: 25px;
+    font-size: 20px;
+}
+@media(max-width:768px){
+    #dessin{
+        flex-direction: column;
+    }
+    #palette, #outils{
+        display: flex;
+        flex-direction: row;
+    }
+    #palette div, #outils div{
+        width: 50px;
+        height: 50px;
+    }
+    #pack-outils{
+        display: block;
+    }
 }
