--- a/styles.css
+++ b/styles.css
@@ -28,6 +28,42 @@ canvas{
     margin-top: 25px;
     font-size: 20px;
 }
+.slider{
+    -webkit-appearance: none;  
+    position: relative;
+    appearance: none;
+    height: 20px;
+    background: #d3d3d300;
+    outline: none;
+    -webkit-transition: .2s; 
+    transition: .2s;
+    width: 90%;
+    border: 2px solid black;
+    border-radius: 3px;
+    margin-top: 5px;
+}
+.slider-groupe{
+    width: 95%;
+    display: flex;
+    flex-direction: row;
+}
+.slider-groupe span{
+    display: inline-block;
+    margin: 8px 4px 0 4px;
+}
+#slider-pinceau{
+    display: inline-block;
+    margin-top: 5px;
+}
+.slider:hover{
+    border: 2px solid rgb(11, 13, 150);
+}
+.flex{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
 @media(max-width:768px){
     #dessin{
         flex-direction: column;
